fixed scrollbar + date format

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,1 +1,7 @@
 @import "tailwindcss";
+@layer base {
+  html {
+    scrollbar-width: none; 
+    -ms-overflow-style: none; 
+  }
+}
